--- a/app/src/main/res/layout/recyclerview_viewpastappointment.xml
+++ b/app/src/main/res/layout/recyclerview_viewpastappointment.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/colorRecyclerView"
+    android:fontFamily="sans-serif-condensed-medium"
+    android:orientation="horizontal">
 
+    <TextView
+        android:id="@+id/textView_appointmentdate"
+        android:layout_width="170dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-condensed-medium" />
+
+    <TextView
+        android:id="@+id/textView_appointmenttime"
+        android:layout_width="170dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-condensed-medium" />
 
 </LinearLayout>
